Fixed scrollbar styling and modified top nav to be sticky

--- a/client/src/components/navs/TopBar.module.scss
+++ b/client/src/components/navs/TopBar.module.scss
@@ -25,6 +25,9 @@
 }
 @media (min-width: 992px) {
   .nav{
+    position: sticky;
+    top: 0;
+    z-index: 100;
     display: flex;
     align-items: center;
     width: 100%;
